wp-content/themes/ecosystem-energy/assets/styles/commons/_buttons.scss
.btn {
  position: relative;
  @include flex();
  width: max-content;
  min-height: 57px;
  padding: 10px 55px;
  background-color: $yellow;
  border: 0px none;
  border-radius: 28.5px;
  @include fontSize(20, 27, 600);
  color: $darkergrey;
  transition: $buttonTransition;
  cursor: pointer;

  // Show dot on the right on hover
  &::after {
    position: absolute;
    right: 0px;
    margin-top: 2px;
    transition: $basicTransition;
    font-family: 'icomoon' !important;
    content: "\e90e";
    font-size: 12px;
    opacity: 0;
  }

  &.no-icon {
    &::after { display: none !important; }
  }

  &.filters {
    height: 60px;
    padding-left: 40px;
    padding-right: 70px;
    border-radius: 30px;
    @include fontSize(16, 22, 600);

    &::after {
      content: "\e907";
      right: 30px;
      opacity: 1;
      font-size: 16px;
    }

    &.open::after { content: "\e901"; }
  }

  // Prevent click events conflicts with icon
  i { pointer-events: none; }

  // Blue button in top yellow bar
  &.blue {
    background-color: $blue;
    color: white;
    &:hover { color: $yellow; }
  }

  // Border only
  &.transparent {
      background: none;
      border: 1px solid rgba(73, 72, 67, 0.4);
  }

  // Yellow circle
  &.circle {
    @extend .no-icon;
    width: 120px;
    height: 120px;
    padding: 0;
    border-radius: 50%;

    &:hover {
      transform: scale(1.1);
      background-color: $yellow;
      color: $darkergrey;
      &::after { display: none; }
    }

    &.small {
      width: 60px;
      height: 60px;
    }

    &.disabled {
      background-color: $lightgrey;
      pointer-events: none;
    }
  }

  &:not(.no-icon):not(input):hover {
    padding-left: 40px;
    padding-right: 70px;

    &::after {
      right: 30px;
      opacity: 1;
    }
  }

  &.filters:hover::after { font-size: 18px; }

  @media (max-width: $tablet) {
    &.filters, &.filters:hover {
      height: 50px;
      min-height: auto;
      padding: 0 40px 0 20px !important;

      &::after { 
        right: 20px !important; 
        font-size: 16px;
      }
    }
  }
}

